051031 release
--------------

fixed a bug where the 3rd field was always opening an attachment menu even
if there were no attachments.

fixed save as draft so it actually works now.

cleaned up the save as draft/resume draft ui a bit.

login authenticator now has password field selected by default.

fixed a bug where pooka would take a long time to startup when the loopback
address wasn't available.

addresses added from the address book are now added as email addresses 
rather than aliases.

status messages now disappear after 30 seconds.

synchronized the MailFileSystemView access so its access shouldn't conflict
with any normal Pooka operations.

default server not having an outbox should no longer throw a NPE.

closing a disconnected imap store no longer results in 'please reopen' 
messages.

made status area at bottom smaller.

added a system tray icon for Pooka (currenly disabled by default; still
experimental).

050505 release
--------------

added -open and --from options to startup.  this allows you to invoke Pooka 
to only send a new message, rather than starting up the entire client.

added a network listener so that, by default, if you try to start up two
Pooka clients from the same Pookarc you instead will just bring the first
one to the foreground.  this also allows an external invocation to contact
a running client to have it open a new message.

trying to sort a MessageTable before all the messages are loaded no longer
results in a gui hang.

we now show a status while closing stores on exit.

fixed a bug where replying to a message in a detached window could result
in the wrong profile being selected by default.

changed the order of saves so that if the save to sent folder fails for
a new message, the message window doesn't disappear until after the
error clears.

050329 release
--------------

optimized large deletes of messages on imap so it doesn't poll the store
for each message removed.
